<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/agents_email_hint"
        android:id="@+id/agents_email_input"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/agents_name_hint"
        android:id="@+id/agents_name_input"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:id="@+id/agents_pass_input"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/re_password_hint"
        android:id="@+id/agents_re_pass_input"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_id_desc"
        android:id="@+id/id_desc"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Agent Hash ID"
        android:id="@+id/create_agent_hash_button"
        android:layout_gravity="center_horizontal" />
</LinearLayout>